添加背景音乐

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "game",
 	"libVersion": "2.0.1",
-	"appid": "touristappid",
+	"appid": "wx115079358e3cfba4",
 	"projectname": "question_challenge",
 	"isGameTourist": true,
 	"condition": {
