--- a/project.config.json
+++ b/project.config.json
@@ -8,7 +8,7 @@
 		"newFeature": true
 	},
 	"compileType": "game",
-	"libVersion": "2.0.1",
+	"libVersion": "2.1.0",
 	"appid": "wx115079358e3cfba4",
 	"projectname": "question_challenge",
 	"isGameTourist": true,
@@ -21,9 +21,13 @@
 			"current": -1,
 			"list": []
 		},
-		"game": {
-			"currentL": -1,
+		"plugin": {
+			"current": -1,
 			"list": []
+		},
+		"game": {
+			"list": [],
+			"current": -1
 		},
 		"miniprogram": {
 			"current": -1,
